--- a/auth-app/quarkus/src/main/resources/application.properties
+++ b/auth-app/quarkus/src/main/resources/application.properties
@@ -1,15 +1,21 @@
 quarkus.http.host=0.0.0.0
 quarkus.http.port=8080
 
-quarkus.http.cors=true
-quarkus.http.cors.origins=http://localhost:5173
-quarkus.http.cors.methods=GET,POST,PUT,PATCH,DELETE,OPTIONS
-quarkus.http.cors.headers=Accept,Authorization,Content-Type,X-Requested-With
-quarkus.http.cors.exposed-headers=Authorization,Content-Type
+# quarkus.http.cors=true
+# quarkus.http.cors.origins=http://localhost:5173
+# quarkus.http.cors.methods=GET,POST,PUT,PATCH,DELETE,OPTIONS
+# quarkus.http.cors.headers=Accept,Authorization,Content-Type,X-Requested-With
+# quarkus.http.cors.exposed-headers=Authorization,Content-Type
 
-quarkus.http.auth.permission.cors.paths=/*
-quarkus.http.auth.permission.cors.policy=permit
-quarkus.http.auth.permission.cors.methods=OPTIONS
+# quarkus.http.auth.permission.cors.paths=/*
+# quarkus.http.auth.permission.cors.policy=permit
+# quarkus.http.auth.permission.cors.methods=OPTIONS
+
+quarkus.http.cors=false
+quarkus.http.cors.origins=http://localhost:9000,http://localhost:9001,http://127.0.0.1:9002,http://viavi-eic-sitespacing.demo:9000
+quarkus.http.cors.methods=GET,POST,PUT,DELETE,PATCH,OPTIONS
+quarkus.http.cors.headers=Content-Type,Authorization
+quarkus.http.cors.exposed-headers=Authorization
 
 quarkus.datasource.db-kind=postgresql
 quarkus.datasource.username=postgres
@@ -17,8 +23,8 @@ quarkus.datasource.password=postgres
 quarkus.datasource.jdbc.url=jdbc:postgresql://db:5432/auth_app
 quarkus.hibernate-orm.database.generation=update
 
-quarkus.http.auth.permission.public.paths=/api/auth/*
-quarkus.http.auth.permission.public.policy=permit
+# quarkus.http.auth.permission.public.paths=/api/auth/*
+# quarkus.http.auth.permission.public.policy=permit
 
 smallrye.jwt.sign.key.location=jwt-keystore.p12
 smallrye.jwt.sign.key.password=password
